--- a/LedgerGUI/Posting.xib
+++ b/LedgerGUI/Posting.xib
@@ -14,7 +14,7 @@
             <subviews>
                 <textField horizontalHuggingPriority="249" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KuB-C7-vJg">
                     <rect key="frame" x="-2" y="0.0" width="431" height="17"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Label" id="G4u-qo-9di">
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Label" allowsEditingTextAttributes="YES" id="G4u-qo-9di">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
