--- a/LedgerGUI/PostingCell.xib
+++ b/LedgerGUI/PostingCell.xib
@@ -8,12 +8,12 @@
         <customObject id="-2" userLabel="File's Owner"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="c22-O7-iKe" customClass="PostingView" customModule="LedgerGUI" customModuleProvider="target">
+        <customView id="c22-O7-iKe" customClass="PostingCell" customModule="LedgerGUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="480" height="17"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="249" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KuB-C7-vJg">
-                    <rect key="frame" x="-2" y="0.0" width="431" height="17"/>
+                    <rect key="frame" x="112" y="0.0" width="317" height="17"/>
                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Label" allowsEditingTextAttributes="YES" id="G4u-qo-9di">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -33,7 +33,7 @@
                 <constraint firstAttribute="trailing" secondItem="R7d-Wr-B8m" secondAttribute="trailing" id="7Os-kN-GRu"/>
                 <constraint firstItem="KuB-C7-vJg" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="8EM-3x-2ld"/>
                 <constraint firstItem="R7d-Wr-B8m" firstAttribute="leading" secondItem="KuB-C7-vJg" secondAttribute="trailing" constant="20" id="JFX-EB-VRA"/>
-                <constraint firstItem="KuB-C7-vJg" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="T9x-sg-qiQ"/>
+                <constraint firstItem="KuB-C7-vJg" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="114" id="T9x-sg-qiQ"/>
                 <constraint firstItem="R7d-Wr-B8m" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="V1I-uu-vtC"/>
                 <constraint firstAttribute="bottom" secondItem="R7d-Wr-B8m" secondAttribute="bottom" id="bqs-aR-3az"/>
                 <constraint firstAttribute="bottom" secondItem="KuB-C7-vJg" secondAttribute="bottom" id="vI3-v3-dUZ"/>
